# hydrogenase-ftir

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  environment.yml  postBuild.sh
data/: test_subtraction_coefficients.xlsx  updated_test_subtraction_coefficients.xlsx
doc/: project Gannt Chart.xlsx  userstory.md
notebooks/anna_winter_2024/: anna_sandbox.ipynb  rel_height_011b.ipynb  rel_height_011s.ipynb  rel_height_160.ipynb  rel_height_169.ipynb  rel_height_170.ipynb  rel_height_171.ipynb  rel_height_176.ipynb  rel_height_trial.ipynb  rel_height_trial2.ipynb
notebooks/anshul_winter_2024/: anshul_pD6_workflow_demo.ipynb  anshul_second_deriv_func_test.ipynb  opus_import.ipynb  range_cutting.ipynb  second_derivative_concept.ipynb  subtraction_coefficient_comparison.ipynb  wv_subtraction.ipynb
notebooks/anu_winter_2024/: anchor_points.py  anu_anchor_baseline_detection.ipynb  anu_anchor_baseline_detection_with_peakWidths.ipynb  anu_pD6_workflow_demo.ipynb  anu_second_deriv_func_test.ipynb  baseline_corrected_peak_info.csv  class_definition_plan.ipynb  testing_anchor_points_adjustment_factor.ipynb  testing_anchor_points_baselineSpline.ipynb  testing_anchor_points_different_prominence.ipynb  testing_anchor_points_multiple_samples.ipynb
notebooks/archive/: water_vapor_jcamp.ipynb
notebooks/eric_winter_2024/: eric_2nd_deriv_attempt1.ipynb  eric_auto_path_test.ipynb  eric_sandbox.ipynb  (+7 more)
src/: cut_range.py  opus_import.ipynb  range_cutting.ipynb  remove_wv.py  wv_subtraction.ipynb
(+58 files in other folders)
